--- a/accesscontrol/templates/accesscontrol/register.html
+++ b/accesscontrol/templates/accesscontrol/register.html
@@ -78,6 +78,19 @@
                             {{ register_form.name.errors }}
                         </div>
                     </div>
+                    <div class="form-group row gender">
+                        <label for="last-name" class="col-sm-5 col-md-4">{% trans "Your are ..." %}</label>
+                        <div class="checkbox col-sm-3">
+                            <label>
+                                <input type="radio" name="gender" value="Female" /> {% trans "A woman" %}
+                            </label>
+                        </div>
+                        <div class="checkbox col-sm-3" style="margin-top: 10px">
+                            <label>
+                                <input type="radio" name="gender" value="Male" /> {% trans "A man" %}
+                            </label>
+                        </div>
+                    </div>
                     {% if settings.REGISTER_WITH_DOB %}
                         {% include "accesscontrol/snippets/dob_widget.html" %}
                     {% endif %}
