filter |floatformat:"0" added when displaying coupon ratio. This avoids error when translating float value with french separator

--- a/accesscontrol/templates/accesscontrol/profile.html
+++ b/accesscontrol/templates/accesscontrol/profile.html
@@ -211,7 +211,7 @@
                                             </div>
                                             {% if user.is_authenticated %}
                                             <div class="progress">
-                                                <div class="progress-bar" style="width: {{ coupon.ratio }}%">
+                                                <div class="progress-bar" style="width: {{ coupon.ratio|floatformat:"0" }}%">
                                                     <span class="sr-only">{{ coupon.ratio }}% Complete</span>
                                                 </div>
                                             </div>
