--- a/static/ikwen/css/admin.css
+++ b/static/ikwen/css/admin.css
@@ -40,26 +40,40 @@ body {font-size: 13px;overflow: hidden;}
     float: left;height: 24px;opacity: .5; width: 24px;}
 #selection-control .select-count {float: left; margin-left: 30px}
 #selection-control .actions {float: right}
-#app-nav {background: #fff;border-bottom: 1px solid #eee;border-top: 1px solid #eee;font-weight: 700;height: 45px;margin-top: 47px;padding-top: 10px;position: fixed;width: 100%;z-index: 21;}
+#app-nav {background: #fff;/* border-bottom: 1px solid #eee; *//* border-top: 1px solid #eee; */font-weight: 700;height: 45px;margin-top: 47px;padding-top: 10px;position: fixed;width: 100%;z-index: 21;}
 #app-nav .app-name {display: none}
 #app-nav .app-logo {float: left;height: 30px;width: 30px;margin-right: 5px;}
 #app-nav .breadcrumb {background: none;float: left;padding-top: 5px;padding-left: 0;}
 #app-nav .breadcrumb li {color: #888}
 div#container.admin {padding-top: 92px;}
 
-#admin-nav {background: #fff;left: 0;max-width: 240px;overflow: auto;position: fixed;height: 100%;
-    overflow: -moz-scrollbars-none; -ms-overflow-style: none; width: 80%;top: 0;z-index: 1;}
+#admin-nav {
+    background: #fff;
+    left: 0;
+    max-width: 270px;
+    overflow: auto;
+    position: fixed;
+    height: 100%;
+    overflow: -moz-scrollbars-none;
+    -ms-overflow-style: none;
+    width: 90%;
+    top: 0;
+    z-index: 1;
+    }
 #admin-nav::-webkit-scrollbar {width: 0 !important;}
 #admin-nav > div > div {padding: 0 10px;}
 #admin-nav .wrapper {padding: 20px 0 90px;}
 #admin-nav .stage {width: 100%;padding: 0 0 200px;}
-#admin-nav .divider {margin: 15px 0;}
 .nav-pills>li>a {padding: 9px 15px;cursor: pointer;font-weight: 700;color: #777;}
-.nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus {background: #eee;color: #333;}
+.nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus {background: #f6f6f6;color: #333;}
 
 #admin-content {height: 100%;overflow: auto;position: absolute;width: 100%;}
 #admin-content .spinner {background: rgba(255, 255, 255, .6); height: 100%; padding-top: 20%; width: 100%; z-index: 100}
 #admin-content > .spinner {margin-left: -250px; padding-top: 20%; position: absolute}
+#stage {width: 90%}
+
+.card-section {border: 1px solid #dedede; border-top-color: #e9e9e9; padding-bottom: 15px;margin-bottom: 30px;}
+.card-section h4 {padding: 15px 15px 0;text-align: center;font-weight: 700;}
 
 #admin-tools-form div {float: left; margin-right: 10px}
 #filter-nav {padding: 0 10px;}
@@ -77,7 +91,7 @@ div#container.admin {padding-top: 92px;}
 #admin-content.change-form h3 {font-size: 18px; font-weight: 700}
 #admin-content.change-form h3:first-of-type {margin-top: 0}
 
-#admin-tools {padding: 0 15px;clear: both;position: fixed;width: 100%;background: #fff;z-index: 11;}
+#admin-tools {background: #fff;clear: both;padding: 0 15px;position: fixed;width: 100%;z-index: 11}
 #admin-tools input, #admin-tools select {border: 1px solid #ddd;font-size: 13px;padding-left: 40px;}
 #admin-tools .btn.action .glyphicon {float: left;margin: 1px 10px 0 0;}
 #admin-tools .btn.filter {padding-left: 30px;}
@@ -174,7 +188,7 @@ footer a {color: #999}
     #selection-control.visible {padding-top: 15px}
     #admin-content > .container-fluid {padding: 0}
     #app-nav .breadcrumb li:not(:last-of-type) {display: none}
-    #admin-tools {margin-top: -20px;border-bottom: 1px solid #eee;height: 45px;padding-top: 13px;}
+    #admin-tools {margin-top: -20px;border-bottom: 1px solid #eee;height: 45px;overflow:auto;padding-top: 13px;}
     #admin-tools .glyphicon {float: left;font-size: 18px;color: #888;}
     #admin-tools .btn.action .glyphicon {margin-right: 0}
     #admin-tools .glyphicon-menu-left {margin: 2px -24px 0 6px;}
@@ -184,6 +198,7 @@ footer a {color: #999}
     #admin-tools input:focus {outline: none;}
     #admin-tools .btn {color: #888}
     #admin-tools .btn:active, #admin-tools .btn.active {background: none; color: #545454; box-shadow: none}
+    #admin-tools-form {width:200%}
     #admin-tools-form .glyphicon-search {margin: 2px 0 0}
     #results {padding-top: 20px}
     .filter-trigger > .glyphicon-filter {float: left;margin: 2px 0 0 10px;}
@@ -204,7 +219,7 @@ footer a {color: #999}
     .navbar-default .navbar-nav>li>a, #navbar .glyphicon {color: #888;}
     .navbar-default .navbar-brand {color: #888;font-size: 30px;padding-top: 15px;}
     #navbar-search input {
-        background: #f1f1f1;
+        background: #f6f6f6;
         color: #545454;
     }
     .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:hover, .navbar-default .navbar-nav>.open>a:focus {color: #666}
@@ -225,7 +240,7 @@ footer a {color: #999}
     .content-tab-list + .tab-content {margin-top: 40px;}
     #admin-tools + .content-tab-list {margin-top: 35px;}
     #admin-tools + .content-tab-list + .tab-content {margin-top: 90px}
-    #object-detail {border-left: 1px solid #eee;top: 110px;}
+    #object-detail {/* border-left: 1px solid #eee; */top: 110px;}
     #object-detail .spinner {top: 110px}
     .images-uploader .frame {width: 235px;height: 190px;}
     .images-uploader .qq-upload-button {line-height: 190px}
@@ -242,7 +257,8 @@ footer a {color: #999}
     #app-nav .breadcrumb {padding-left: 15px; padding-top: 2px}
     #app-nav .app-name {display: block;float: left;margin-top: 3px;width: 190px;}
     #admin-nav {top: 110px;}
-    #admin-content {padding-left: 255px}
+    #admin-content {padding-left: 285px;}
+    #stage .container-fluid {padding: 0}
     #selection-control {height: 66px;min-height: 66px; padding-top: 20px; top: -70px}
     #selection-control .actions {margin-top: -4px}
     .help {padding-top: 3px}
@@ -250,17 +266,19 @@ footer a {color: #999}
     #admin-content.change-form {padding-top: 15px}
     #admin-content.change-form form {padding-left: 0}
     #admin-content .configuration-stage {margin: auto; width: 820px}
-    #admin-tools {padding-left: 0; padding-right: 285px}
+    #admin-tools {padding-left: 0;padding-right: 315px;}
     #admin-tools .btn {margin-right: 0}
-    #admin-content.has-edge-panel-right #admin-tools {padding-right: 540px;}
+    #admin-content.has-edge-panel-right #admin-tools {padding-right: 565px;}
     .results-filter {padding: 35px 10px 5px 0;}
     #admin-content .member .info, #admin-content .ik-li .info {max-width: 600px;}
     #admin-content .has-edge-panel-right .member .info, #admin-content .has-edge-panel-right .ik-li .info {max-width: 400px;}
     .pagination {margin-left: 0}
+    .card-section {margin-bottom: 50px;}
 }
 @media (min-width: 1200px) {
     .member .info, .ik-li .info {margin-left: 15px}
     #admin-content .has-edge-panel-right .member .info, #admin-content .has-edge-panel-right .ik-li .info {max-width: 600px;}
+    #stage {width: 820px}
 }
 
 /* Object Details ik-li info width must be overriden */
