--- a/billing/templates/billing/transaction_log.html
+++ b/billing/templates/billing/transaction_log.html
@@ -46,6 +46,22 @@
                         <input type="hidden" id="page" name="page" />
                     </div>
                     <div class="form-group col-sm-4 col-lg-3">
+                        <label for="period">Period</label>
+                        <select id="period" name="period" class="form-control input-sm">
+                            <option value="today">Today</option>
+                            <option value="yesterday">Yesterday</option>
+                            <option value="last_7_days">Last 7 days</option>
+                            <option value="last_28_days">Last 28 days</option>
+                            <option value="since_the_1st">Since the 1st of month</option>
+                            <option value="other" data-toggle="modal" data-target="#period-chooser">Other ...</option>
+                        </select>
+                        <input type="hidden" id="start-alt" name="starting_on" />
+                        <input type="hidden" id="end-alt" name="ending_on" />
+                        <input type="hidden" id="is-running" name="is_running" />
+                        <input type="hidden" id="status" name="status" />
+                        <input type="hidden" id="page" name="page" />
+                    </div>
+                    <div class="form-group col-sm-4 col-lg-3">
                         <div class="custom-period">
                             <span class="start text-muted">17/02/2018</span> -
                             <span class="end text-muted">19/02/2018</span>                                &nbsp;&nbsp;
@@ -178,7 +194,7 @@
                 }
             });
             $('#operator, #app').change(loadResults);
-            $('#content').on('click', '.see-all', function() {
+            $('#admin-content').on('click', '.see-all', function() {
                 $('#is-running').val('');
                 $('#status').val('');
                 loadResults();
