console.css included here rather than in the base

--- a/core/templates/core/configuration.html
+++ b/core/templates/core/configuration.html
@@ -7,6 +7,7 @@
 
 {% block head_style %}
     {{ block.super }}
+    <link href="{% static 'ikwen/css/console.css' %}" media="screen" rel="stylesheet" type="text/css" />
     <link href="{% static 'ikwen/ajaxuploader/css/fileuploader.css' %}" media="screen" rel="stylesheet" type="text/css" />
     <style>
         #context-search {clear: both; margin: 10px 0 6px 0;}
