--- a/static/ikwen/css/admin.css
+++ b/static/ikwen/css/admin.css
@@ -70,7 +70,6 @@ div#container.admin {padding-top: 92px;}
 #admin-content {height: 100%;overflow: auto;position: absolute;width: 100%;}
 #admin-content .spinner {background: rgba(255, 255, 255, .6); height: 100%; padding-top: 20%; width: 100%; z-index: 100}
 #admin-content > .spinner {margin-left: -250px; padding-top: 20%; position: absolute}
-#stage {width: 90%}
 
 .card-section {border: 1px solid #dedede; border-top-color: #e9e9e9; padding-bottom: 15px;margin-bottom: 30px;}
 .card-section h4 {padding: 15px 15px 0;text-align: center;font-weight: 700;}
@@ -198,7 +197,8 @@ footer a {color: #999}
     #admin-tools input:focus {outline: none;}
     #admin-tools .btn {color: #888}
     #admin-tools .btn:active, #admin-tools .btn.active {background: none; color: #545454; box-shadow: none}
-    #admin-tools-form {width:200%}
+    #admin-tools-form {width:90%}
+    #admin-tools-form > div {width: 200%}
     #admin-tools-form .glyphicon-search {margin: 2px 0 0}
     #results {padding-top: 20px}
     .filter-trigger > .glyphicon-filter {float: left;margin: 2px 0 0 10px;}
@@ -250,6 +250,7 @@ footer a {color: #999}
     #admin-content .member .info, #admin-content .ik-li .info {max-width: 400px;}
     #admin-content .has-edge-panel-right .member .info, #admin-content .has-edge-panel-right .ik-li .info {max-width: 225px;}
     .pagination {margin-left: 15px}
+    #stage {width: 90%;}
 }
 @media (min-width: 992px) {
     .menu-button {display: none}
@@ -258,6 +259,7 @@ footer a {color: #999}
     #app-nav .app-name {display: block;float: left;margin-top: 3px;width: 190px;}
     #admin-nav {top: 110px;}
     #admin-content {padding-left: 285px;}
+    #stage {width: 100%;}
     #stage .container-fluid {padding: 0}
     #selection-control {height: 66px;min-height: 66px; padding-top: 20px; top: -70px}
     #selection-control .actions {margin-top: -4px}
@@ -279,8 +281,16 @@ footer a {color: #999}
     .member .info, .ik-li .info {margin-left: 15px}
     #admin-content .has-edge-panel-right .member .info, #admin-content .has-edge-panel-right .ik-li .info {max-width: 600px;}
     #stage {width: 820px}
+    #stage .tiles .ik-li {width: 33.33%}
 }
 
+#admin-content .embed {background: #fff; float: left; height: 850px; width: 100%}
+iframe#billing-stage {
+    border: none;
+    margin: -15px 0 0 -15px;
+    height: 170%;
+    width: 100%;
+}
 /* Object Details ik-li info width must be overriden */
 #object-detail .ik-li .info {width: auto;max-width: 174px;}
 #delete-theme-logo {color: #ff3030; cursor: pointer; float: right}
